<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radioThemeGroup">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusableInTouchMode="false"
                android:text="@string/theme_green_blue"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/theme_dark"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/theme_indigo"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/theme_monochrome_1"
                android:textColor="@color/black"
                android:textSize="25sp"/>
    </RadioGroup>

</LinearLayout>
